# serializer version: 1
# name: test_edit_setup_script_with_exec_imm_sql
  '''
  d output/deploy
  d output/deploy/__generated
  d output/deploy/__generated/snowpark
  f output/deploy/__generated/snowpark/__generated.sql
  f output/deploy/__generated/snowpark/dummy.sql
  d output/deploy/__generated/snowpark/moduleB
  f output/deploy/__generated/snowpark/moduleB/dummy.sql
  f output/deploy/manifest.yml
  d output/deploy/moduleA
  d output/deploy/moduleA/moduleC
  f output/deploy/moduleA/moduleC/setup.sql
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql.1
  '''
  ===== Contents of: output/deploy/__generated/snowpark/__generated.sql =====
  EXECUTE IMMEDIATE FROM '/__generated/snowpark/moduleB/dummy.sql';
  EXECUTE IMMEDIATE FROM '/__generated/snowpark/dummy.sql';
  
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql.2
  '''
  ===== Contents of: output/deploy/__generated/snowpark/dummy.sql =====
  #this is a file
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql.3
  '''
  ===== Contents of: output/deploy/__generated/snowpark/moduleB/dummy.sql =====
  #this is a file
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql.4
  '''
  ===== Contents of: output/deploy/manifest.yml =====
  manifest_version: 1
  
  artifacts:
      setup_script: moduleA/moduleC/setup.sql
  
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql.5
  '''
  ===== Contents of: output/deploy/moduleA/moduleC/setup.sql =====
  create application role app_public;
  EXECUTE IMMEDIATE FROM '/__generated/snowpark/__generated.sql';
  
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql_noop
  '''
  d output/deploy
  d output/deploy/__generated
  d output/deploy/__generated/snowpark
  f output/deploy/__generated/snowpark/__generated.sql
  f output/deploy/manifest.yml
  d output/deploy/moduleA
  d output/deploy/moduleA/moduleC
  d output/deploy/moduleA/moduleC/setup.sql
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql_noop.1
  '''
  ===== Contents of: output/deploy/__generated/snowpark/__generated.sql =====
  #some text
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql_noop.2
  '''
  ===== Contents of: output/deploy/manifest.yml =====
  manifest_version: 1
  
  artifacts:
      setup_script: moduleA/moduleC/setup.sql
  
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql_symlink
  '''
  d output/deploy
  d output/deploy/__generated
  d output/deploy/__generated/snowpark
  f output/deploy/__generated/snowpark/__generated.sql
  f output/deploy/manifest.yml
  f output/deploy/setup.sql
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql_symlink.1
  '''
  ===== Contents of: output/deploy/__generated/snowpark/__generated.sql =====
  EXECUTE IMMEDIATE FROM '/__generated/snowpark/moduleB/dummy.sql';
  EXECUTE IMMEDIATE FROM '/__generated/snowpark/dummy.sql';
  
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql_symlink.2
  '''
  ===== Contents of: output/deploy/manifest.yml =====
  manifest_version: 1
  
  artifacts:
      setup_script: setup.sql
  
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql_symlink.3
  '''
  ===== Contents of: output/deploy/setup.sql =====
  create application role admin;
  EXECUTE IMMEDIATE FROM '/__generated/snowpark/__generated.sql';
  
  '''
# ---
# name: test_generate_create_sql_ddl_statements_w_all_entries
  '''
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip')
  PACKAGES=('package_one==1.0.2', 'package_two')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='my_function_handler'
  EXECUTE AS OWNER;
  
  '''
# ---
# name: test_generate_create_sql_ddl_statements_w_select_entries
  '''
  CREATE OR REPLACE
  PROCEDURE my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  HANDLER='my_function_handler'
  EXECUTE AS OWNER;
  
  '''
# ---
# name: test_generate_grant_sql_ddl_statements
  '''
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl0]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl10]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl11]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl12]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python<<0.15.0', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl13]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python2', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl14]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl1]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl2]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('other-package', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl3]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl4]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl5]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl6]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl7]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl8]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl9]
  '''
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_process_no_collected_functions
  '''
  d output/deploy
  f output/deploy/manifest.yml
  d output/deploy/moduleA
  d output/deploy/moduleA/moduleC
  f output/deploy/moduleA/moduleC/setup.sql
  d output/deploy/stagepath
  f output/deploy/stagepath/data.py
  d output/deploy/stagepath/extra_import1.zip
  d output/deploy/stagepath/extra_import2.zip
  f output/deploy/stagepath/main.py
  '''
# ---
# name: test_process_no_collected_functions.1
  '''
  ===== Contents of: output/deploy/manifest.yml =====
  manifest_version: 1
  
  artifacts:
      setup_script: moduleA/moduleC/setup.sql
  
  '''
# ---
# name: test_process_no_collected_functions.2
  '''
  ===== Contents of: output/deploy/moduleA/moduleC/setup.sql =====
  create application role app_public;
  '''
# ---
# name: test_process_no_collected_functions.3
  '''
  ===== Contents of: output/deploy/stagepath/data.py =====
  # this is a file
  
  '''
# ---
# name: test_process_no_collected_functions.4
  '''
  ===== Contents of: output/deploy/stagepath/main.py =====
  # this is a file
  
  '''
# ---
# name: test_process_with_collected_functions
  '''
  d output/deploy
  d output/deploy/__generated
  d output/deploy/__generated/snowpark
  f output/deploy/__generated/snowpark/__generated.sql
  d output/deploy/__generated/snowpark/stagepath
  f output/deploy/__generated/snowpark/stagepath/data.sql
  f output/deploy/__generated/snowpark/stagepath/main.sql
  f output/deploy/manifest.yml
  d output/deploy/moduleA
  d output/deploy/moduleA/moduleC
  f output/deploy/moduleA/moduleC/setup.sql
  d output/deploy/stagepath
  f output/deploy/stagepath/data.py
  d output/deploy/stagepath/extra_import1.zip
  d output/deploy/stagepath/extra_import2.zip
  f output/deploy/stagepath/main.py
  '''
# ---
# name: test_process_with_collected_functions.1
  '''
  ===== Contents of: output/deploy/__generated/snowpark/__generated.sql =====
  EXECUTE IMMEDIATE FROM '/__generated/snowpark/stagepath/data.sql';
  EXECUTE IMMEDIATE FROM '/__generated/snowpark/stagepath/main.sql';
  
  '''
# ---
# name: test_process_with_collected_functions.2
  '''
  ===== Contents of: output/deploy/__generated/snowpark/stagepath/data.sql =====
  -- Generated by the Snowflake CLI from stagepath/data.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/data.py')
  PACKAGES=('package_one==1.0.2', 'package_two', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='data.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_process_with_collected_functions.3
  '''
  ===== Contents of: output/deploy/__generated/snowpark/stagepath/main.sql =====
  -- Generated by the Snowflake CLI from stagepath/main.py
  -- DO NOT EDIT
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/', '/stagepath/data.py', '/stagepath/extra_import1.zip', '/stagepath/main.py', '/stagepath/some_dir_str', '/stagepath/withslash.py', '@dummy_stage_str')
  PACKAGES=('package_one==1.0.2', 'package_two', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_process_with_collected_functions.4
  '''
  ===== Contents of: output/deploy/manifest.yml =====
  manifest_version: 1
  
  artifacts:
      setup_script: moduleA/moduleC/setup.sql
  
  '''
# ---
# name: test_process_with_collected_functions.5
  '''
  ===== Contents of: output/deploy/moduleA/moduleC/setup.sql =====
  create application role app_public;
  EXECUTE IMMEDIATE FROM '/__generated/snowpark/__generated.sql';
  
  '''
# ---
# name: test_process_with_collected_functions.6
  '''
  ===== Contents of: output/deploy/stagepath/data.py =====
  # this is a file
  
  '''
# ---
# name: test_process_with_collected_functions.7
  '''
  ===== Contents of: output/deploy/stagepath/main.py =====
  # this is a file
  
  '''
# ---
